--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cop4331-small-project"]
+[submodule "frontend"]
 	path = cop4331-small-project
 	url = https://github.com/charlielevine/contact-manager-frontend
