--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "frontend"]
-	path = frontend
+	path = cop4331-small-project
 	url = https://github.com/charlielevine/contact-manager-frontend
